@@ -4,6 +4,8 @@
 2014-01-19 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add ResponseInfo connection/close support in cloudi_service_tcp
+    * Add packet_buffer_recv_size, packet_buffer_send_size, and
+      packet_buffer_size arguments to cloudi_service_tcp
 
 2014-01-18 Michael Truog   <mjtruog [at] gmail (dot) com>
 
